Sat Mar 20 19:37:11 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Removed the duplicated code from bounce checks

Sat Mar 20 17:49:43 GMT 2004 (njh)
----------------------------------
  * libclamav:	More flexable approach to scanning bounce messages within
  	emails means more bounces are caught but at the expense of some
	duplication of code for now

Sat Mar 20 15:53:10 CET 2004 (tk)
---------------------------------
  * libclamav: make cli_filetype non static

Sat Mar 20 13:33:49 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	More bounces added

Sat Mar 20 12:40:15 GMT 2004 (njh)
----------------------------------
  * clamav-milter: strerror_r is a bit confused on Fedora Linux. The man page
	says it returns an int, but the prototype in string.h says it returns
	a char *
		Say how many bytes can't be written to clamd - it may give a
	clue what's wrong

Sat Mar 20 00:16:26 CET 2004 (tk)
---------------------------------
  * libclamav: cl_gentemp(): do not use /dev/urandom

Fri Mar 19 21:42:51 CET 2004 (tk)
---------------------------------
  * clamd: thrmgr.c, server-th.c: added missing new line characters in logg()
	   (reported by Sergey <a_s_y*sama.ru>)

Fri Mar 19 17:48:31 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Handle "binary encoding" (whatever that is :-)
  	the same as no encoding

Fri Mar 19 15:50:47 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Handle empty content-disposition headers

Fri Mar 19 16:00:51 CET 2004 (tk)
---------------------------------
  * libclamav: small cosmetic fixes in format strings, also added some
	       statics (thanks to Dirk Mueller <dmuell*gmx.net>)

Fri Mar 19 08:18:24 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	If an RFC822 message is found as part of a multipart
  	message and that message has no encoding, don't save for scanning